.kubernetes/01-kse-init.yaml
# ---
# namespace
# ---
apiVersion: v1
kind: Namespace
metadata:
  name: kse
