.kubernetes/02-kse-backend-deployment.yaml
# ---
# backend - deploy
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: kse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  paused: false
  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: harbor
      volumes:
        - name: log
          emptyDir: {}
      restartPolicy: Always
      containers:
        - name: core
          image: "192.168.99.115/yingzhuo/kse-backend"
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 8
            timeoutSeconds: 5
            periodSeconds: 12
            httpGet:
              scheme: HTTP
              path: "/actuator/health/liveness"
              port: 8080
              httpHeaders:
                - name: "Authorization"
                  value: "Basic YWN0dWF0b3I6YWN0dWF0b3I="
          readinessProbe:
            initialDelaySeconds: 8
            timeoutSeconds: 5
            periodSeconds: 12
            httpGet:
              scheme: HTTP
              path: "/actuator/health/readiness"
              port: 8080
              httpHeaders:
                - name: "Authorization"
                  value: "Basic YWN0dWF0b3I6YWN0dWF0b3I="
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: log
              mountPath: "/var/log/"
        - name: filebeat
          image: "registry.cn-shanghai.aliyuncs.com/yingzhuo/filebeat:5.6.16"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: log
              mountPath: "/var/log"
