.kubernetes/03-kse-frontend.yaml
# ---
# frontend
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: kse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  paused: false
  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: harbor
      volumes:
        - name: log
          emptyDir: {}
      restartPolicy: Always
      containers:
        - name: core
          image: "192.168.99.115/yingzhuo/kse-frontend"
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 8
            timeoutSeconds: 5
            periodSeconds: 12
            httpGet:
              scheme: HTTPS
              path: "/actuator/health/liveness"
              port: 8443
              httpHeaders:
                - name: "Authorization"
                  value: "Basic YWN0dWF0b3I6YWN0dWF0b3I="
          readinessProbe:
            initialDelaySeconds: 8
            timeoutSeconds: 5
            periodSeconds: 12
            httpGet:
              scheme: HTTPS
              path: "/actuator/health/readiness"
              port: 8443
              httpHeaders:
                - name: "Authorization"
                  value: "Basic YWN0dWF0b3I6YWN0dWF0b3I="
          ports:
            - name: http
              containerPort: 7777
            - name: https
              containerPort: 8443
          volumeMounts:
            - name: log
              mountPath: "/var/log/"
        - name: filebeat
          image: "registry.cn-shanghai.aliyuncs.com/yingzhuo/filebeat:5.6.16"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: log
              mountPath: "/var/log"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: kse
  annotations:
    com.github.yingzhuo/created-by: "应卓"
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "7777"
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - name: http
      targetPort: 7777
      port: 7777
---
